--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "next-themes": "latest",
     "playwright": "latest",
     "react": "^19",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.4.3",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
@@ -63,7 +63,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "latest",
-    "vaul": "^0.9.6",
+    "vaul": "^0.9.9",
     "zod": "^3.24.1",
     "zustand": "latest"
   },
